--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["zypeh <zypeh.geek@gmail.com>"]
 
 [dependencies]
+hyper = "0.10.5"
+jsonwebtoken = "1.1.16"
+rustc-serialize = "0.3"
 rocket = "0.2.2"
 rocket_codegen = "0.2.2"
 serde = "0.9"
