--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,14 @@ time = "*"
 hyper = "0.10.5"
 jsonwebtoken = "1.1.6"
 rustc-serialize = "0.3"
-rocket = "0.2.2"
-rocket_codegen = "0.2.2"
+rocket = "0.2.3"
+rocket_codegen = "0.2.3"
 serde = "0.9"
 serde_json = "0.9"
 serde_derive = "0.9"
+ring = "0.7.3"
 
 [dependencies.rocket_contrib]
+version = "0.2.3"
 default-features = false
 features = ["json"]
