--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,15 @@ serde = "0.9"
 serde_json = "0.9"
 serde_derive = "0.9"
 ring = "0.7.3"
+diesel = "0.9.0"
+dotenv = "0.8.0"
+envy = "0.2.0"
 
 [dependencies.rocket_contrib]
 version = "0.2.3"
 default-features = false
 features = ["json"]
+
+[dependencies.diesel_codegen]
+version = "0.9.0"
+features = ["postgres"]
