--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,21 +8,27 @@ time = "*"
 hyper = "0.10.5"
 jsonwebtoken = "1.1.6"
 rustc-serialize = "0.3"
-rocket = "0.2.3"
-rocket_codegen = "0.2.3"
+rocket = "0.2.4"
+rocket_codegen = "0.2.4"
 serde = "0.9"
 serde_json = "0.9"
 serde_derive = "0.9"
 ring = "0.7.3"
-diesel = "0.9.0"
 dotenv = "0.8.0"
 envy = "0.2.0"
+r2d2 = "0.7.1"
+r2d2-diesel = "0.12.0"
+lazy_static = "0.2"
 
 [dependencies.rocket_contrib]
-version = "0.2.3"
+version = "0.2.4"
 default-features = false
 features = ["json"]
 
+[dependencies.diesel]
+version = "0.12.0"
+features = ["postgres"]
+
 [dependencies.diesel_codegen]
-version = "0.9.0"
+version = "0.12.0"
 features = ["postgres"]
