--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,12 @@ name = "database"
 path = "src/database/lib.rs"
 
 [dependencies]
+url = "*"
 time = "*"
-hyper = "0.10.5"
+hyper = { git = "https://github.com/hyperium/hyper" }
+hyper-tls = { git = "https://github.com/hyperium/hyper-tls" }
+tokio-core = "0.1"
+futures = "0.1"
 jsonwebtoken = "1.1.6"
 rustc-serialize = "0.3"
 rocket = "0.2.4"
