--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 DATABASE_URL=postgres://postgres:passwd@localhost/doboom
+
+REDIRECT_URL="http://localhost:8000"
+FACEBOOK_APPID="1"
+FACEBOOK_APPSECRET="2"
+TWITTER_CONSUMERKEY="3"
+TWITTER_CONSUMERSECRET="4"
+GOOGLE_CLIENTID="5"
+GOOGLE_APPSECRET="6"
