--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ hyper = { git = "https://github.com/hyperium/hyper" }
 hyper-tls = { git = "https://github.com/hyperium/hyper-tls" }
 tokio-core = "0.1"
 futures = "0.1"
-jsonwebtoken = "2"
+jsonwebtoken = "2.0.0-beta-1"
 rocket = "0.2.4"
 rocket_codegen = "0.2.4"
 serde = "0.9"
