database configuration correction

--- a/config/database.toml
+++ b/config/database.toml
@@ -16,7 +16,7 @@ pool = 5
 adapter = "postgresql"
 encoding = "unicode"
 database = "doboom_test"
-username = "goyox86"
+username = "clu"
 password = "password123"
 host = "localhost"
 port = 5432
@@ -26,7 +26,7 @@ pool = 5
 adapter = "postgresql"
 encoding = "unicode"
 database = "doboom_production"
-username = "goyox86"
+username = "clu"
 password = "password123"
 host = "localhost"
 port = 5432
