--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,45 +1,40 @@
 [package]
 name = "doboom"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["zypeh <zypeh.geek@gmail.com>"]
 
-[[bin]]
-name = "doboom"
-path = "src/main.rs"
-
-[lib]
-name = "database"
-path = "src/database/lib.rs"
-
 [dependencies]
-url = "*"
 time = "*"
-hyper = { git = "https://github.com/hyperium/hyper" }
-hyper-tls = { git = "https://github.com/hyperium/hyper-tls" }
-tokio-core = "0.1"
-futures = "0.1"
-jsonwebtoken = "2.0.0-beta-1"
-rocket = "0.2.4"
-rocket_codegen = "0.2.4"
-serde = "0.9"
-serde_json = "0.9"
-serde_derive = "0.9"
+url = "*"
+base64 = "0.5.0"
 ring = "0.7.3"
+lazy_static = "0.2"
+diesel = { version = "0.12.0", features = ["postgres"] }
+diesel_codegen = { version = "0.12.0", features = ["postgres"] }
 dotenv = "0.8.0"
-envy = "0.2.0"
+toml = "0.2"
 r2d2 = "0.7.1"
 r2d2-diesel = "0.12.0"
-lazy_static = "0.2"
+rocket = "0.2"
+rocket_codegen = "0.2.6"
+rocket_contrib = "0.2.6"
+serde = "1"
+serde_json = "1"
+serde_derive = "1"
+tokio-core = "0.1"
+futures = "0.1"
+jsonwebtoken = "2"
 
-[dependencies.rocket_contrib]
-version = "0.2.4"
-default-features = false
-features = ["json"]
+[dependencies.hyper]
+git = "https://github.com/hyperium/hyper"
 
-[dependencies.diesel]
-version = "0.12.0"
-features = ["postgres"]
+[dependencies.hyper-tls]
+git = "https://github.com/hyperium/hyper-tls"
 
-[dependencies.diesel_codegen]
-version = "0.12.0"
-features = ["postgres"]
+[dependencies.clippy]
+version = "*"
+optional = true
+
+[features]
+default = []
+
