--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+DATABASE_URL=postgres://zypeh:password@localhost/doboom
+CONFIG_FILE=./config/config.toml
+
 REDIRECT_URL="http://localhost:8000"
 FACEBOOK_APPID="1"
 FACEBOOK_APPSECRET="2"
