--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,15 +15,23 @@ dotenv = "0.8.0"
 toml = "0.4"
 r2d2 = "0.7.1"
 r2d2-diesel = "0.12.0"
-rocket = "0.2"
-rocket_codegen = "0.2.6"
-rocket_contrib = "0.2.6"
 serde = "1"
 serde_json = "1"
 serde_derive = "1"
 tokio-core = "0.1"
 futures = "0.1"
-jsonwebtoken = "2"
+jsonwebtoken = "2.0"
+
+[dependencies.rocket]
+git = "https://github.com/SergioBenitez/Rocket"
+
+[dependencies.rocket_codegen]
+git = "https://github.com/SergioBenitez/Rocket"
+
+[dependencies.rocket_contrib]
+git = "https://github.com/SergioBenitez/Rocket"
+default-features = false
+features = ["json"]
 
 [dependencies.hyper]
 git = "https://github.com/hyperium/hyper"
