--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ url = "*"
 base64 = "0.5.0"
 ring = "0.7.3"
 lazy_static = "0.2"
-diesel = { version = "0.12.0", features = ["postgres"] }
-diesel_codegen = { version = "0.12.0", features = ["postgres"] }
+diesel = { version = "~0.12", features = ["postgres"] }
+diesel_codegen = { version = "~0.12", features = ["postgres"] }
 dotenv = "0.8.0"
 toml = "0.4"
 r2d2 = "0.7.1"
